import Foundation

enum AccessibilityIdentifier {
    static let cameraButton = "CameraButton"
    static let libraryButton = "LibraryButton"
    static let processingView = "ProcessingView"
    static let resultsView = "ResultsView"
    static let characterImage = "CharacterImage"
    static let videosCollectionView = "VideosCollectionView"
} 