...
        setupUI()
        configureContent()
    }
    
    private func setupUI() {
        view.backgroundColor = .systemBackground
        title = "Character Details"
        
        view.addSubview(scrollView)
        scrollView.addSubview(contentView)
        
        [characterImageView, nameLabel, animeLabel, descriptionLabel, videosCollectionView].forEach {
            contentView.addSubview($0)
...
